tests/sksl/errors/MeshVertexWithShader.stage
### Compilation failed:

error: 10: effects are not permitted in mesh vertex shaders
uniform shader myShader;
^^^^^^^^^^^^^^^^^^^^^^^
1 error
